--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "travel_month = \"J\""
+    "travel_month = \"January\""
    ]
   },
   {
@@ -78,7 +78,8 @@
    },
    "outputs": [],
    "source": [
-    "travel_month # \"January\""
+    "travel_month \n",
+    "# \"January\""
    ]
   },
   {
